# UBB-FMI

./: README.md
Semester 1/Algorithms and Programming/Seminars/: Seminar10-sortalg.py
Semester 2/Object Oriented Programming/Exam/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Semester 2/Object Oriented Programming/Laboratories/lab11/: CMakeLists.txt  Song.cpp  Song.h  example.cpp  main.cpp
Semester 2/Object Oriented Programming/Laboratories/lab12/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Semester 3/Advanced Programming Methods/Fitness Center/: output.txt  settings.properties
Semester 3/Advanced Programming Methods/IT Resources/:  .HEIC
Semester 3/Advanced Programming Methods/loT devices/: output.txt
Semester 3/Computer Networks/: IMG_3621.HEIC  labExam2024#1.pkt  labExam2024#2.pkt
Semester 3/Computer Networks/Retake/: Retake computer programming.docx  Retake packet tracker  .docx
Semester 3/Computer Systems Architecture/: Problems - Lecture 8.docx
Semester 3/Computer Systems Architecture/Seminars/: Seminar-01.pptx  Seminar-02.pptx  Seminar-03.docx  Seminar-04.docx  Seminar-05.docx  Seminar-06.docx
Semester 3/Databases/: Practical Exam 2.sql
Semester 3/Databases/Laboratories/: SQLQuery1.sql  SQLQuery2.sql  SQLQuery3.sql  SQLQuery4.sql
Semester 3/Differential Equations/: labTest2.mw
Semester 4/Operating Systems/: README.md
Semester 4/Probability Theory/Seminars/: Attendance Probabilities MI-EN 2024-2025 (anonymised).xlsx  Numbers of exercises solved PROBA MI-EN 2024-2025.xlsx
(+533 files in other folders)
